# ai-native

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  ainative.yaml  compose.yaml  pyproject.toml  release-please-config.json
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
.devcontainer/scripts/: post-create.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-pr-uv-lock.yml  semantic-pr-title.yml  template-smoke.yml
ai_native/: __init__.py  browser.py  cli.py  config.py  models.py  orchestrator.py  prompting.py  reference_workflow.py  run_projection.py  run_registry.py  slice_runtime.py  specs.py  state.py  utils.py  workspace_artifacts.py
ai_native/adapters/: __init__.py  base.py  codex.py  copilot.py  external.py
ai_native/gitops/: __init__.py
ai_native/prompts/: architecture.md  architecture_review.md  architecture_revise.md  dependency_merge_repair.md  loop.md  loop_revise.md  plan.md  plan_checklist.md  plan_phase_grounding.md  plan_phase_implementation.md  plan_phase_intent.md  plan_questions.md  plan_review.md  plan_revise.md  pr_repair.md  pr_review.md  pr_review_triage.md  prd.md  prd_review.md  prd_revise.md  recon.md  reference_context.md  slice.md  test_review.md  verify.md  verify_revise.md  visual_review.md
ai_native/stages/: __init__.py  (+10 more)
docs/: app-scaffold.md  configuration.md  prompts.md  releases.md  self-hosted-run-registry.md  self-hosted-runtime-security.md  workflow.md
financial_rag_analyst/: __init__.py  __main__.py  app.py  cli.py
fixtures/: README.md
services/run_registry/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/run_registry/app/: config.py  db.py  main.py
services/run_registry/k8s/: run-registry.yaml
services/run_registry/migrations/: 001_init.sql  002_run_snapshots.sql  003_run_id_text.sql
services/run_registry/tests/: test_api.py  test_migrations.py
tests/: __init__.py  conftest.py  helpers.py
(+50 files in other folders)
