[project]
name = "financial-rag-analyst"
version = "0.1.0"
description = "Financial Agentic RAG analyst scaffold built for Google ADK workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "google-adk>=1.26,<2",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.11,<3",
  "PyYAML>=6.0,<7",
  "python-dotenv>=1.2,<2",
]

[project.scripts]
ainative = "ai_native.cli:main"
financial-rag = "financial_rag_analyst.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6.0,<7",
  "ruff>=0.11,<0.12",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_native", "financial_rag_analyst"]
