[project]
name = "run-registry"
version = "0.1.0"
description = "Standalone, self-hostable run registry service"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.12",
  "psycopg[binary]==3.2.6",
  "pydantic==2.11.3",
  "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
]

[tool.uv]
package = false
